<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_users_base_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="@color/splashBackground">
    <LinearLayout
        android:id="@+id/progress_order_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.ContentLoadingProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tooltipText="@string/cargando_usuarios"
            android:translationZ="5dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_orders_base_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="-5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/admin_orders_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/admin_order_caps"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/linearLayout_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_orders_title">

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_orders_title">

            <Spinner
                android:id="@+id/users_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_gravity="center"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admin_orders_title">

            </Spinner>
            <ImageButton
                android:id="@+id/reload_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_reload_users_24"/>
            <ImageButton
                android:id="@+id/calendar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar"/>
            <ImageButton
                android:id="@+id/every_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:src="@drawable/all_dates"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_view_pager_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:layoutDirection="ltr"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.687"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/orders_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/edittext_layout"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp" />
        </LinearLayout>

        <Button
            android:id="@+id/buscar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_drawable"
            android:paddingHorizontal="5dp"
            android:paddingVertical="3dp"
            android:text="@string/buscar_pedidos"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_view_pager_orders"
            app:layout_constraintVertical_bias="0.093" />
        <Button
            android:id="@+id/cancel_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_button_drawable"
            android:paddingHorizontal="5dp"
            android:paddingVertical="3dp"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/buscar_button"
            app:layout_constraintTop_toBottomOf="@+id/layout_view_pager_orders"
            app:layout_constraintVertical_bias="0.112" />

        <TextView
            android:id="@+id/choose_id_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="5dp"
            android:text="@string/selecciona_usuario"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_orders_title"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/choose_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:paddingHorizontal="8dp"
            android:text="@string/selecciona_fecha"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/choose_id_textview"
            app:layout_constraintTop_toBottomOf="@+id/admin_orders_title"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>