...
    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="change_user_data">Mis Datos</string>
    <string name="new_user">Registrar Usuario</string>
    <string name="admin_users">Administrar Usuarios</string>
    <string name="see_last_order">Mi Ultimo Pedido</string>
    <string name="admin_orders">Administrar Pedidos</string>
    <string name="admin_products"><u>Administrar Productos</u></string>
    <string name="admin_products_caps"><u>ADMINISTRAR PRODUCTOS</u></string>
    <string name="basket">Cesta</string>
    <string name="logout">Logout</string>
    <string name="dialog_message">Quieres salir de verdad?</string>
    <string name="no">No</string>
...
    <string name="contrasena_cambiada_con_exito">Contrasena cambiada con exito!!!</string>
    <string name="escriba_aqui">Escriba aqui su contrasena</string>
    <string name="modifica_datos_usuario"><u>MODIFICA TUS DATOS</u></string>
    <string name="modificar_datos_este_usuario">MODIFICAR DATOS</string>
    <string name="algunos_datos_no_cambia">*Algunos datos como el CIF no se pueden cambiar.\nContacte con el administrador de la pescaderia.</string>
    <string name="pregunta_invalida">Seleccione una pregunta</string>
    <string name="OK">OK</string>
    <string name="seguro_cambio">Seguro que quieres cambiar tus datos?</string>
    <string name="didnt_modify_user">No has modificado tus datos.</string>
    <string name="busca_producto">Busqueda de producto</string>
    <string name="lista_productos">LISTA DE PRODUCTOS</string>
    <string name="ultimo_pedido_string"><u>SU ULTIMO PEDIDO</u></string>
    <string name="pedir_de_nuevo">REALIZAR MISMO PEDIDO</string>
...
